--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <div class="col-sm-12">
     <h1 id="demo" style="text-align: center">Her radiant smile.</h1>
-        <img src="pic.jpg" class="img-responsive" style="margin: 0 auto"></img>
+        <img src="pic.JPG" class="img-responsive" style="margin: 0 auto"></img>
 </div>
 
 
