--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </br>
     </br>
     </br>
-    <img src="pic.jpg" class="img-responsive" style="margin: 0 auto" height=40% width=40%></img>
+    <img src="pic.JPG" class="img-responsive" style="margin: 0 auto" height=40% width=40%></img>
     </br>
 </div>
 
