--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 "84" : "When we can just cuddle for long stretches without saying anything",
                 "85" : "When she nuzzles her nose against mine",
                 "86" : "She's an A+ texter.",
-                "87" : "When she voices her opinions",
+                "87" : "When she voices her opinions about something she's passionate about",
                 "88" : "When we have awesome arguments",
                 "89" : "When she smiles all big and pretty for any picture",
                 "90" : "When she calls out sexism",
@@ -123,7 +123,8 @@
                 "97" : "When she says 'Mhmmmmmmm.'",
                 "98" : "When she gets all excited about the cool places on our map.",
                 "99" : "She knows more about the supernatural than anyone",
-                "100" : "She's a Leo. (Don't tell anyone I said that.)"
+                "100" : "She's a Leo. (Don't tell anyone I said that.)",
+                "101" : "Her Twitter game is literal fire."
             }
         ]
         var min = Math.ceil(0);
